--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             id="keyword"            
             placeholder="Busca gifs, hashtags, temas, busca lo que quieras…"
           />
-          <button type="button" onclick="getKeyword();">Enviar</button>
+          <button type="button" onclick="searchKeyword();">Enviar</button>
         </div>
       </form>
       <div class="resultados"></div>
@@ -64,6 +64,6 @@
     </section>
 
     <script src="app/search.js"></script>
-    <script src="app/tendencia.js"></script>    
+    <script src="app/trending.js"></script>    
   </body>
 </html>
