fetchApi se puede reutilizar con distintas url

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </section>
 
     <script src="app/search.js"></script>
-    <script src="app/trending.js"></script>    
+    <script src="app/trending.js"></script>
+    <script src="app/suggestion.js"></script>   
   </body>
 </html>
