appendSuggestion while works

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
 
     <section class="trending">
       <div class="head-wrap"><h2>Tendencias:</h2></div>
-      <div class="trend-wrap"></div>
+      <div class="trend-wrap" id="trendWrap"></div>
     </section>
 
-    <script src="app/search.js"></script>
+    <script src="app/request.js"></script>    
     <script src="app/suggestion.js"></script>
+    <script src="app/search.js"></script>
     <script src="app/trending.js"></script>       
   </body>
 </html>
