Separar y reutilizar append

--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
       <div class="trend-wrap" id="trendWrap"></div>
     </section>
 
-    <script src="app/request.js"></script>    
+    <script src="app/request.js"></script>
+    <script src="app/append.js"></script>
     <script src="app/suggestion.js"></script>
+
+    <script src="app/trending.js"></script>
     <script src="app/search.js"></script>
-    <script src="app/trending.js"></script>       
+           
   </body>
 </html>
