autoComplete.js works

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           <button type="button" id="search-button">Enviar</button>
         </div>
       </form>
+      <ul class="auto-wrap" id="autoWrap"></ul>
+      <div class="head-wrap"><h2>Tus resultados</h2></div> <!-- aparece cuando se hace una búsqueda -->
       <div class="search-wrap" id="searchWrap"></div>
     </section>
 
@@ -68,6 +70,7 @@
     <script src="app/suggestion.js"></script>
     <script src="app/trending.js"></script>
     <script src="app/search.js"></script>
+    <script src="app/autoSearch.js"></script>
            
   </body>
 </html>
