basico capturar y grabar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <div class="menu">
         <button>Crear Guifos</button>
         <button>Elegir tema</button><button>&#9662;</button>
-        <a href="html/captura.html">Mis Guifos</a>
+        <a href="/app/html/capture.html">Mis Guifos</a>
+
       </div>
     </nav>
 
