--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       <div class="menu">
         <button>Crear Guifos</button>
         <button>Elegir tema</button><button>&#9662;</button>
-        <a href="/app/html/capture.html">Mis Guifos</a>
-
+        <a href="app/html/capture.html">Mis Guifos</a>
       </div>
     </nav>
 
@@ -45,14 +44,15 @@
         <div class="form-wrap">
           <input
             type="text"
-            id="keyword"            
+            id="keyword"
             placeholder="Busca gifs, hashtags, temas, busca lo que quieras…"
           />
           <button type="button" id="search-button">Enviar</button>
         </div>
       </form>
       <ul class="auto-wrap" id="autoWrap"></ul>
-      <div class="head-wrap"><h2>Tus resultados</h2></div> <!-- aparece cuando se hace una búsqueda -->
+      <div class="head-wrap"><h2>Tus resultados</h2></div>
+      <!-- aparece cuando se hace una búsqueda -->
       <div class="search-wrap" id="searchWrap"></div>
     </section>
 
@@ -72,6 +72,5 @@
     <script src="app/trending.js"></script>
     <script src="app/search.js"></script>
     <script src="app/autoSearch.js"></script>
-           
   </body>
 </html>
